--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <div class="profile-placeholder">
-                        <span class="profile-icon">👨‍💻</span>
-                    </div>
+                    <img src="quinn-graduation.jpg" alt="Quinn Skelly in graduation cap and gown" class="profile-image">
                 </div>
             </div>
         </section>
@@ -192,9 +190,16 @@
                     <div class="timeline-item">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
-                            <h3>Master of Arts in Economics</h3>
-                            <p class="company">Florida International University (FIU)</p>
-                            <p class="period">Aug 2025 - Present</p>
+                            <div class="education-header">
+                                <div class="education-info">
+                                    <h3>Master of Arts in Economics</h3>
+                                    <p class="company">Florida International University (FIU)</p>
+                                    <p class="period">Aug 2025 - Present</p>
+                                </div>
+                                <div class="university-logo">
+                                    <img src="fiu-logo.jpg" alt="Florida International University Logo" class="logo-image">
+                                </div>
+                            </div>
                             <ul>
                                 <li>Relevant Coursework: Econometrics I, Econometrics II, Calculus I, Applied Statistics, Game Theory and Applications</li>
                                 <li>Focus on quantitative methods and statistical analysis</li>
@@ -205,9 +210,16 @@
                     <div class="timeline-item">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
-                            <h3>Bachelor of Science in Finance</h3>
-                            <p class="company">Nova Southeastern University (NSU)</p>
-                            <p class="period">Aug 2021 - May 2025</p>
+                            <div class="education-header">
+                                <div class="education-info">
+                                    <h3>Bachelor of Science in Finance</h3>
+                                    <p class="company">Nova Southeastern University (NSU)</p>
+                                    <p class="period">Aug 2021 - May 2025</p>
+                                </div>
+                                <div class="university-logo">
+                                    <img src="nsu-logo.jpg" alt="Nova Southeastern University Logo" class="logo-image">
+                                </div>
+                            </div>
                             <ul>
                                 <li>Minor: Economics</li>
                                 <li>Relevant Coursework: Securities Analysis, Advanced Financial Management, Advanced Macroeconomics, Advanced Microeconomics</li>
@@ -241,13 +253,11 @@
                 </header>
                 <div class="projects-grid">
                     <article class="project-card">
-                        <div class="project-image">
-                            <div class="project-placeholder">
-                                <span class="project-icon">📈</span>
-                            </div>
-                        </div>
                         <div class="project-content">
-                            <h3>Medtronic Pharmaceuticals Investment Thesis</h3>
+                            <div class="project-header">
+                                <span class="project-icon">📈</span>
+                                <h3>Medtronic Pharmaceuticals Investment Thesis</h3>
+                            </div>
                             <p>Comprehensive investment analysis using CAPM, DCF, and Dividend Discount models to determine fair value and identify market inefficiencies.</p>
                             <div class="project-tech">
                                 <span>CAPM Analysis</span>
@@ -262,13 +272,11 @@
                         </div>
                     </article>
                     <article class="project-card">
-                        <div class="project-image">
-                            <div class="project-placeholder">
-                                <span class="project-icon">💰</span>
-                            </div>
-                        </div>
                         <div class="project-content">
-                            <h3>Personal Investment Portfolio</h3>
+                            <div class="project-header">
+                                <span class="project-icon">💰</span>
+                                <h3>Personal Investment Portfolio</h3>
+                            </div>
                             <p>Active portfolio management using fundamental analysis and options strategies, achieving 22.74% CAGR over two years.</p>
                             <div class="project-tech">
                                 <span>Fundamental Analysis</span>
@@ -283,13 +291,11 @@
                         </div>
                     </article>
                     <article class="project-card">
-                        <div class="project-image">
-                            <div class="project-placeholder">
-                                <span class="project-icon">🎓</span>
-                            </div>
-                        </div>
                         <div class="project-content">
-                            <h3>Academic Research Projects</h3>
+                            <div class="project-header">
+                                <span class="project-icon">🎓</span>
+                                <h3>Academic Research Projects</h3>
+                            </div>
                             <p>Quantitative analysis projects in econometrics, game theory, and statistical modeling for financial applications.</p>
                             <div class="project-tech">
                                 <span>Econometrics</span>
