--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                     <p class="period">Aug 2025 - Present</p>
                                 </div>
                                 <div class="university-logo">
-                                    <img src="fiu-logo.jpg" alt="Florida International University Logo" class="logo-image" loading="lazy" decoding="async">
+                                    <img src="fiu-seal.png" alt="Florida International University Seal" class="logo-image" loading="lazy" decoding="async">
                                 </div>
                             </div>
                             <ul>
@@ -217,7 +217,7 @@
                                     <p class="period">Aug 2021 - May 2025</p>
                                 </div>
                                 <div class="university-logo">
-                                    <img src="nsu-logo.jpg" alt="Nova Southeastern University Logo" class="logo-image" loading="lazy" decoding="async">
+                                    <img src="nsu-shark-logo.png" alt="Nova Southeastern University Shark Logo" class="logo-image" loading="lazy" decoding="async">
                                 </div>
                             </div>
                             <ul>
